<resources>
    <string name="app_name">CapitalWJ</string>
    <string name="jiang">jiang</string>
    <string name="login_and_register_title">请登录或者注册会员</string>

    <string name="hint_user_name_et">用户名/手机号/电子邮件地址</string>
    <string name="hint_user_pwd_et">登录密码</string>


    <string name="user_register_btn">注册</string>
    <string name="user_login_btn">登录</string>


    <string name="forget_pwd_tv">忘记密码？</string>
    <string name="get_back_pwd_title">找回密码</string>
    <string name="system_you_phone_hint">请输入您的手机号码</string>
    <string name="hint_register_verification_code_et">请输入您收到的验证码</string>
    <string name="user_get_back_pwd_btn">找回密码</string>
    <string name="user_register_title">注册会员</string>
    <string name="register_btn">注册</string>
    <string name="hint_register_pwd_et">请设置长度6~20位的密码</string>
    <string name="hint_register_invite_code_et">请输入邀请人的邀请码</string>
    <string name="fragment_home_tv_shop"><u>购买家具 昌吉个人新居购买家具 去投资》</u></string>
    <string name="now_register">立即注册</string>
    <string name="get_verification_code_btn">获取验证码</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>

</resources>
