<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <ImageView
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:src="@mipmap/shape"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="欢迎登录"
        android:layout_marginTop="90dp"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/login_user_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_name_et"
        android:textSize="15sp"
        android:padding="15dp"
        android:drawablePadding="15dp"
        android:layout_centerVertical="true"
        android:background="@null"
        android:drawableLeft="@mipmap/user"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/login_user_name_et"
        android:background="@color/line"/>
    <EditText
        android:id="@+id/login_user_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:password="true"
        android:background="@null"
        android:padding="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/hint_user_pwd_et"
        android:layout_below="@id/login_user_name_et"
        android:drawableLeft="@mipmap/shape_pwd"
        android:drawableRight="@mipmap/look_pwd"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/login_user_pwd_et"
        android:background="@color/line"
        android:id="@+id/view" />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/user_login_btn"
        android:background="@mipmap/login_btn"
        android:layout_marginBottom="50dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/now_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/login_btn"
        android:text="@string/now_register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/forget_pwd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="16sp"
        android:textColor="@color/login_btn"
        android:text="@string/forget_pwd_tv"/>
</RelativeLayout>