<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bc.capital.ui.activity.sub.RegisterActivity">
    <include layout="@layout/top_title" android:id="@+id/app_title"/>
    <LinearLayout
        android:id="@+id/register_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:padding="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/register_phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/system_you_phone_hint"
            android:textSize="15sp"
            android:padding="10dp"
            android:drawablePadding="8dp"
            android:drawableLeft="@mipmap/phone_number"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/register_verification_code_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_register_verification_code_et"
                android:textSize="15sp"
                android:padding="10dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@mipmap/yan_zheng_ma"
                android:background="@null"/>
            <Button
                android:id="@+id/register_get_verification_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/get_verification_code_btn"
                android:textColor="#f19400"
                android:background="@mipmap/forget_pwd_background"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/line"/>
    </LinearLayout>
    <Button
        android:id="@+id/forget_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/get_back_pwd_title"
        android:background="@drawable/register_and_login_btn_style"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/register_et"
        android:textSize="20sp"/>
</RelativeLayout>
